Customer has a main menu to add another item, and view their cart.

--- a/HTMLAndCssPractice/Index.css
+++ b/HTMLAndCssPractice/Index.css
@@ -26,8 +26,8 @@ body {
   }
 
   button {
-    background-color: #04AA6D;
-    color: white;
+    background-color: #210b70;
+    color: rgb(143, 55, 55);
     padding: 14px 20px;
     margin: 8px 0;
     border: none;
